Add project references and update dockerfile

--- a/src/DataIngestor.Infrastucture/DataIngestor.Infrastructure.csproj
+++ b/src/DataIngestor.Infrastucture/DataIngestor.Infrastructure.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Persistence\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataIngestor.Application\DataIngestor.Application.csproj" />
+  </ItemGroup>
+
 </Project>
