--- a/src/DataIngestor.AppHost/DataIngestor.AppHost.csproj
+++ b/src/DataIngestor.AppHost/DataIngestor.AppHost.csproj
@@ -13,4 +13,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DataIngestor.Infrastucture\DataIngestor.Infrastructure.csproj" />
+    <ProjectReference Include="..\DataIngestor.Presentation\DataIngestor.Presentation.csproj" />
+  </ItemGroup>
+
 </Project>
