--- a/.github/workflows/build_and_push.yaml
+++ b/.github/workflows/build_and_push.yaml
@@ -27,5 +27,6 @@ jobs:
         uses: docker/build-push-action@v6.18.0
         with:
           context: .
+          file: ./src/DataIngestor.AppHost/Dockerfile
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
