Added support fo Weak API Created Domain models and a reader service Added a test controller to read metrics

--- a/src/DataIngestor.Presentation/DataIngestor.Presentation.csproj
+++ b/src/DataIngestor.Presentation/DataIngestor.Presentation.csproj
@@ -6,9 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DataIngestor.Application\DataIngestor.Application.csproj" />
