--- a/src/DataIngestor.AppHost/DataIngestor.AppHost.csproj
+++ b/src/DataIngestor.AppHost/DataIngestor.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -10,11 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.0" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.23.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataIngestor.Infrastucture\DataIngestor.Infrastructure.csproj" />
+    <ProjectReference Include="..\DataIngestor.Infrastructure\DataIngestor.Infrastructure.csproj" />
     <ProjectReference Include="..\DataIngestor.Presentation\DataIngestor.Presentation.csproj" />
   </ItemGroup>
 
