--- a/src/DataIngestor.AppHost/appsettings.json
+++ b/src/DataIngestor.AppHost/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Integrations": {
+    "WeakAPI": {
+      "URL": "*",
+      "ApiKey": "*"
+    }
+  },
   "AllowedHosts": "*"
 }
