--- a/src/DataIngestor.Domain/DataIngestor.Domain.csproj
+++ b/src/DataIngestor.Domain/DataIngestor.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Entities\" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
